syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

message RegisterRequest {
  string serviceName = 1;
  string qualifier = 2;
  string address = 3;
}

message RegisterResponse {

}

message LookupRequest {
  string serviceName = 1;
  string qualifier = 2;
}

message LookupResponse {
  repeated string servers = 1;
}

service NamingServerService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
}